esphome/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: esphome
  namespace: tsebra-home
  labels:
    app: esphome

spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:

      containers:
        - name: esphome
          image: esphome/esphome:stable
          ports:
            - name: http
              containerPort: 6052

          volumeMounts:
            - name: esphome-config-root
              mountPath: /config
      volumes:
        - name: esphome-config-root
          persistentVolumeClaim:
            claimName: esphome-config-root
